Refactor PDF text extraction and enhance error handling in chatbot initialization

--- a/notebook/chatbot.ipynb
+++ b/notebook/chatbot.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4046ed70-796a-40cb-942e-dac094d79c0e",
    "metadata": {},
    "outputs": [],
@@ -139,12 +139,16 @@
     ")\n",
     "\n",
     "# Simple prompt but we can add additional rules and use one shot or few shot prompting \n",
-    "prompt = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\",\n",
-    "     \"You are a helpful assistant for a financial policy document. \"\n",
-    "     \"Answer concisely and include the exact page & paragraph citations.\\n\\nContext:\\n{context}\"),\n",
-    "    (\"human\", \"{input}\")\n",
-    "])\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You are a helpful assistant for a financial policy document. \"\n",
+    "            \"Answer questions and include the exact page & paragraph citations.\\n\\nContext:\\n{context}\",\n",
+    "        ),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "\n",
     "qa_chain   = create_stuff_documents_chain(llm, prompt)\n",
